--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "react-resizable-panels": "^2.1.7",
     "react-scan": "^0.0.54",
     "react-stripe-js": "^1.1.5",
+    "recharts": "^3.5.1",
     "rehype-katex": "^7.0.1",
     "rehype-prism-plus": "^2.0.0",
     "rehype-raw": "^7.0.0",
